fixed bug on mobile datepicker

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,8 @@ section {
   /*justify-content: center;*/
 }
 
+@media screen and (max-width: 768px){
+  ngui-datetime-picker {
+    display: none !important;
+  }
+}
